c2dascript-transpile/tests/snapshots/snapshots__transpile@f128.c.linux.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/f128.das
---
options gen2

def c2da_min_int(a : int; b : int) : int {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int(a : int; b : int) : int {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint(a : uint; b : uint) : uint {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint(a : uint; b : uint) : uint {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_int64(a : int64; b : int64) : int64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int64(a : int64; b : int64) : int64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint64(a : uint64; b : uint64) : uint64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint64(a : uint64; b : uint64) : uint64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_clip_uint(v : int) : uint {
    if (v < 0) {
        return 0x0
    }
    if (v > 255) {
        return 0xff
    }
    return uint(v)
}
def c2da_bool_to_uint(v : bool) : uint {
    if (v) {
        return 0x1
    } else {
        return 0x0
    }
}
def c2da___assert_fail(expr : void?; file : void?; line : uint; func : void?) {
}
[export]
def long_double_test() {
    var one : double = double(double(1.0))
    var zero : double
    var add : double = double(one) + double(zero)
    var huge : double = double(0.0)
    var i : int = int(one)
    var f : float = float(one)
    var cast_from_int : double = double(i)
    var cast_from_float : double = double(f)
    var is_inf : bool = bool(0)
    if (uint64(one) != uint64(0)) {
        var dummy : int
    }
}
[export]
def float128_test() {
    var one_0 : double = double(double(1.0))
    var zero_0 : double
    var add_0 : double = double(one_0) + double(zero_0)
    var huge_0 : double = double(0.0)
    var i_0 : int = int(one_0)
    var f_0 : float = float(one_0)
    var cast_from_int_0 : double = double(i_0)
    var cast_from_float_0 : double = double(f_0)
    var ld_from_float128 : double = double(one_0)
    var is_inf_0 : bool = bool(0)
    if (uint64(one_0) != uint64(0)) {
        var dummy_0 : int
    }
}

[export] def main() : int {
    return 0
}
